src/core-crm/objects/Donation__c/Donation__c.object-meta.xml
<CustomObject>
    <description>Donation stores information about expected and/or completed donations made to the university. Donations arise out of Opportunities. Donation can either be a financial transaction linked to a payment or it can record the donation of a tangible object such as a piece of art.</description>
    <label>Donation</label>
    <nameField>
        <displayFormat>DN-{000000}</displayFormat>
        <label>Donation Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Donations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>