src/core-crm/objects/Donation__c/fields/Amount_Paid_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid_To_Date__c</fullName>
    <description>The point-in-time sum of donation payments received to date.</description>
    <inlineHelpText>The point-in-time sum of donation payments received to date.</inlineHelpText>
    <label>Amount Paid To Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>