src/core-crm/objects/Donation__c/fields/Cancellation_Comment__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Comment__c</fullName>
    <description>Comment to explain why the donation record moved into the ‘Cancelled’ Stage.</description>
    <inlineHelpText>Comment to explain why the donation record moved into the ‘Cancelled’ Stage.</inlineHelpText>
    <label>Cancellation Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>