src/core-crm/objects/Donation__c/fields/Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Date__c</fullName>
    <description>The date when the donation record Stage is marked as ‘Cancelled’.</description>
    <inlineHelpText>The date when the donation record Stage is marked as ‘Cancelled’.</inlineHelpText>
    <label>Cancellation Date</label>
    <type>Date</type>
</CustomField>