src/core-crm/objects/Donation__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <description>The reason the donation record was moved into the ‘Cancelled’ Stage.</description>
    <inlineHelpText>The reason the donation record was moved into the ‘Cancelled’ Stage.</inlineHelpText>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Designation Discontinued</fullName>
            </value>
            <value>
                <fullName>Donor Requested Cancellation</fullName>
            </value>
            <value>
                <fullName>Variation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>