src/core-crm/objects/Donation__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description for the Internal Funds Transfer.</description>
    <inlineHelpText>Description for the Internal Funds Transfer.</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>