src/core-crm/objects/Donation__c/fields/Donate_URL__c.field-meta.xml
<CustomField>
    <fullName>Donate_URL__c</fullName>
    <description>Direct link for a pre-populated Giving Portal page where the donor can make their donation.</description>
    <inlineHelpText>Direct link for a pre-populated Giving Portal page where the donor can make their donation.</inlineHelpText>
    <label>Donate URL</label>
    <type>Url</type>
</CustomField>