src/core-crm/objects/Donation__c/fields/Donation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Donation_Amount__c</fullName>
    <description>The Donation Amount.</description>
    <inlineHelpText>The Donation Amount.</inlineHelpText>
    <label>Donation Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>