src/core-crm/objects/Donation__c/fields/Donation_Asset__c.field-meta.xml
<CustomField>
    <fullName>Donation_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the associated Donation Asset record.</description>
    <inlineHelpText>Lookup to the associated Donation Asset record.</inlineHelpText>
    <label>Donation Asset</label>
    <referenceTo>Donation_Asset__c</referenceTo>
    <relationshipLabel>Donations</relationshipLabel>
    <relationshipName>Donations</relationshipName>
    <type>Lookup</type>
</CustomField>