src/core-crm/objects/Donation__c/fields/Donation_Cause__c.field-meta.xml
<CustomField>
    <fullName>Donation_Cause__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the associated Donation Cause record. Donation funds will be distributed to this Cause.</description>
    <inlineHelpText>Lookup to the associated Donation Cause record. Donation funds will be distributed to this Cause.</inlineHelpText>
    <label>Donation Cause</label>
    <referenceTo>Donation_Cause__c</referenceTo>
    <relationshipLabel>Donations</relationshipLabel>
    <relationshipName>Donations</relationshipName>
    <type>Lookup</type>
</CustomField>