src/core-crm/objects/Donation__c/fields/Donation_Comment__c.field-meta.xml
<CustomField>
    <fullName>Donation_Comment__c</fullName>
    <description>Business entered comment about the donation.</description>
    <inlineHelpText>Business entered comment about the donation.</inlineHelpText>
    <label>Donation Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>