src/core-crm/objects/Donation__c/fields/Donation_Parent__c.field-meta.xml
<CustomField>
    <fullName>Donation_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Parent Donation record. Child records will exist where record type = ‘Custom Payment Plan&apos; (to support the required installment data fields) or where record type = &apos;One-Off Payment’ and there is a requirements to divide a single lump sum donation across more than one donation cause.</description>
    <inlineHelpText>Lookup to Parent Donation record.</inlineHelpText>
    <label>Donation Parent</label>
    <referenceTo>Donation__c</referenceTo>
    <relationshipLabel>Donations</relationshipLabel>
    <relationshipName>Donations</relationshipName>
    <type>Lookup</type>
</CustomField>