src/core-crm/objects/Donation__c/fields/Donation_Type__c.field-meta.xml
<CustomField>
    <fullName>Donation_Type__c</fullName>
    <description>The type of donation the donor intends to make.</description>
    <inlineHelpText>The type of donation(s) the donor intends to make.</inlineHelpText>
    <label>Donation Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QUT Giving Webpage</fullName>
            </value>
            <value>
                <fullName>Staff Giving</fullName>
            </value>
            <value>
                <fullName>Pledge</fullName>
            </value>
            <value>
                <fullName>Gift In Kind</fullName>
            </value>
            <value>
                <fullName>Gift In Will</fullName>
            </value>
            <value>
                <fullName>Endowment</fullName>
            </value>
            <value>
                <fullName>Influenced Revenue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>