src/core-crm/objects/Donation__c/fields/Expected_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expected_Total_Amount__c</fullName>
    <description>The total donation amount expected to be received once payment is made. Where multiple payments are expected this value is sum of all the expected payments.</description>
    <inlineHelpText>The total donation amount expected to be received once payment is made. Where multiple payments are expected this value is sum of all the expected payments.</inlineHelpText>
    <label>Expected Total Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>