src/core-crm/objects/Donation__c/fields/Final_Installment_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Installment_Date__c</fullName>
    <description>The date of the final installment payment.</description>
    <inlineHelpText>The date of the final installment.</inlineHelpText>
    <label>Final Installment Date</label>
    <type>Date</type>
</CustomField>