src/core-crm/objects/Donation__c/fields/Final_Instalment_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Instalment_Date__c</fullName>
    <description>The date of the final instalment payment.</description>
    <inlineHelpText>The date of the final instalment.</inlineHelpText>
    <label>Final Instalment Date</label>
    <type>Date</type>
</CustomField>