src/core-crm/objects/Donation__c/fields/First_Installment_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Installment_Date__c</fullName>
    <description>The date of the first installment payment.</description>
    <inlineHelpText>The date of the first installment.</inlineHelpText>
    <label>First Installment Date</label>
    <type>Date</type>
</CustomField>