src/core-crm/objects/Donation__c/fields/First_Instalment_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Instalment_Date__c</fullName>
    <description>The date of the first instalment payment.</description>
    <inlineHelpText>The date of the first instalment.</inlineHelpText>
    <label>First Instalment Date</label>
    <type>Date</type>
</CustomField>