src/core-crm/objects/Donation__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <description>The frequency that each instalment payment will be made under the schedule.</description>
    <inlineHelpText>The frequency that each instalment payment will be made under the schedule.</inlineHelpText>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>