src/core-crm/objects/Donation__c/fields/From_Designation__c.field-meta.xml
<CustomField>
    <fullName>From_Designation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the associated Designation record that the Donation will be disbursed from.</description>
    <inlineHelpText>Lookup to the associated Designation record that the Donation will be disbursed from.</inlineHelpText>
    <label>From Designation</label>
    <referenceTo>Designation__c</referenceTo>
    <relationshipLabel>From Designation</relationshipLabel>
    <relationshipName>From_Designation</relationshipName>
    <type>Lookup</type>
</CustomField>