src/core-crm/objects/Donation__c/fields/Has_Designation_Split__c.field-meta.xml
<CustomField>
    <fullName>Has_Designation_Split__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Donation needs to be allocated to multiple Designations.</description>
    <inlineHelpText>Indicates if the Donation needs to be allocated to multiple Designations.</inlineHelpText>
    <label>Has Designation Split</label>
    <type>Checkbox</type>
</CustomField>