src/core-crm/objects/Donation__c/fields/Installment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Installment_Amount__c</fullName>
    <description>The amount of each instalment payment under the schedule.</description>
    <inlineHelpText>The amount of each instalment payment under the schedule.</inlineHelpText>
    <label>Installment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>