src/core-crm/objects/Donation__c/fields/Installment_Date__c.field-meta.xml
<CustomField>
    <fullName>Installment_Date__c</fullName>
    <description>The agreed date for the installment payment.</description>
    <inlineHelpText>The agreed date for the installment payment.</inlineHelpText>
    <label>Installment Date</label>
    <type>Date</type>
</CustomField>