src/core-crm/objects/Donation__c/fields/Installment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Installment_Frequency__c</fullName>
    <description>The frequency that each installment payment will be made under the schedule.</description>
    <inlineHelpText>The frequency that each installment payment will be made under the schedule.</inlineHelpText>
    <label>Installment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Fortnightly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>