src/core-crm/objects/Donation__c/fields/Instalment_Date__c.field-meta.xml
<CustomField>
    <fullName>Instalment_Date__c</fullName>
    <description>The agreed date for the instalment payment.</description>
    <inlineHelpText>The agreed date for the instalment payment.</inlineHelpText>
    <label>Instalment Date</label>
    <type>Date</type>
</CustomField>