src/core-crm/objects/Donation__c/fields/Instalment_Number__c.field-meta.xml
<CustomField>
    <fullName>Instalment_Number__c</fullName>
    <description>Instalment numbering scheme. For each instalment record, start and 1 and increment.</description>
    <inlineHelpText>Instalment numbering scheme.</inlineHelpText>
    <label>Instalment Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>