src/core-crm/objects/Donation__c/fields/Instalments_Paid__c.field-meta.xml
<CustomField>
    <fullName>Instalments_Paid__c</fullName>
    <description>The number of instalment payments that have been paid so far.</description>
    <inlineHelpText>The number of instalment payments that have been paid so far.</inlineHelpText>
    <label>Instalments Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>