src/core-crm/objects/Donation__c/fields/Interested_In_Gift_In_Will__c.field-meta.xml
<CustomField>
    <fullName>Interested_In_Gift_In_Will__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates a donor is interested in leaving a gift to QUT in their Will. This is captured during the online donation transaction process.</description>
    <inlineHelpText>Indicates a donor is interested in leaving a gift to QUT in their Will. This is captured during the online donation transaction process.</inlineHelpText>
    <label>Interested In Gift-In-Will</label>
    <type>Checkbox</type>
</CustomField>