src/core-crm/objects/Donation__c/fields/Is_Anonymous_Donation__c.field-meta.xml
<CustomField>
    <fullName>Is_Anonymous_Donation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Anonymous Donation</label>
    <type>Checkbox</type>
</CustomField>