src/core-crm/objects/Donation__c/fields/Is_Fixed_Amount_Donation__c.field-meta.xml
<CustomField>
    <fullName>Is_Fixed_Amount_Donation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if the schedule for a recurring payment arrangement is driven by a fixed amount.</description>
    <inlineHelpText>Identifies if the schedule for a recurring payment arrangement is driven by a fixed amount.</inlineHelpText>
    <label>Is Fixed Amount Donation</label>
    <type>Checkbox</type>
</CustomField>