src/core-crm/objects/Donation__c/fields/Is_Gift_In_Will__c.field-meta.xml
<CustomField>
    <fullName>Is_Gift_In_Will__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if the donation has been specified in the donor’s Will.</description>
    <inlineHelpText>Identifies if the donation has been specified in the donor’s Will.</inlineHelpText>
    <label>Is Gift In Will</label>
    <type>Checkbox</type>
</CustomField>