src/core-crm/objects/Donation__c/fields/Matching_Code__c.field-meta.xml
<CustomField>
    <fullName>Matching_Code__c</fullName>
    <description>Unique Identifier used for transaction matching purposes. Business user cannot create or edit this field. Database field only.</description>
    <label>Matching Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>