src/core-crm/objects/Donation__c/fields/Next_Installment_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Installment_Date__c</fullName>
    <description>The date of the next installment payment.</description>
    <inlineHelpText>The date of the next installment.</inlineHelpText>
    <label>Next Installment Date</label>
    <type>Date</type>
</CustomField>