src/core-crm/objects/Donation__c/fields/Next_Instalment_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Instalment_Date__c</fullName>
    <description>The date of the next instalment payment.</description>
    <inlineHelpText>The date of the next instalment.</inlineHelpText>
    <label>Next Instalment Date</label>
    <type>Date</type>
</CustomField>