src/core-crm/objects/Donation__c/fields/Owner_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Full_Name__c</fullName>
    <description>The full name of the DEP user who is responsible for maintaining the Donation.</description>
    <formula>$User.FirstName + &apos; &apos; + $User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The full name of the DEP user who is responsible for maintaining the Donation.</inlineHelpText>
    <label>Owner Full Name</label>
    <type>Text</type>
</CustomField>