src/core-crm/objects/Donation__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <description>Identifies the method of payment for the donation.</description>
    <inlineHelpText>Identifies the method of payment for the donation.</inlineHelpText>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Payroll Deduction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>