src/core-crm/objects/Donation__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <description>Indicates how the donor would like to make the Donation.</description>
    <inlineHelpText>Indicates how the donor would like to make the Donation.</inlineHelpText>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One-Off Payment</fullName>
            </value>
            <value>
                <fullName>Recurring Payment</fullName>
            </value>
            <value>
                <fullName>Payment Plan</fullName>
            </value>
            <value>
                <fullName>Internal Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>