src/core-crm/objects/Donation__c/fields/QUT_Included_in_Will__c.field-meta.xml
<CustomField>
    <fullName>QUT_Included_in_Will__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that a donor has left a gift to QUT in their Will. This is captured during the online donation transaction process. QUT may already know about this gift from prior engagement, or it could be a new opportunity to follow up.</description>
    <inlineHelpText>Indicates that a donor has left a gift to QUT in their Will. This is captured during the online donation transaction process. QUT may already know about this gift from prior engagement, or it could be a new opportunity to follow up.</inlineHelpText>
    <label>QUT Included in Will</label>
    <type>Checkbox</type>
</CustomField>