src/core-crm/objects/Donation__c/fields/Schedule_Type__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Type__c</fullName>
    <description>Identifies if the schedule for a recurring payment arrangement is frequency-based or a fixed amount.</description>
    <inlineHelpText>Identifies if the schedule for a recurring payment arrangement is frequency-based or a fixed amount.</inlineHelpText>
    <label>Schedule Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Frequency</fullName>
            </value>
            <value>
                <fullName>Fixed Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>