src/core-crm/objects/Donation__c/fields/To_Designation__c.field-meta.xml
<CustomField>
    <fullName>To_Designation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the associated Designation record that the Donation will be disbursed to.</description>
    <inlineHelpText>Lookup to the associated Designation record that the Donation will be disbursed to.</inlineHelpText>
    <label>To Designation</label>
    <referenceTo>Designation__c</referenceTo>
    <relationshipLabel>To Designation</relationshipLabel>
    <relationshipName>To_Designation</relationshipName>
    <type>Lookup</type>
</CustomField>