src/core-crm/objects/Donation__c/fields/Total_Instalments__c.field-meta.xml
<CustomField>
    <fullName>Total_Instalments__c</fullName>
    <description>The total number of instalment payments expecting to be made under the schedule.</description>
    <inlineHelpText>The total number of instalment payments expecting to be made under the schedule.</inlineHelpText>
    <label>Total Instalments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>