src/core-crm/objects/Donation__c/recordTypes/Cause.recordType-meta.xml
<RecordType>
    <fullName>Cause</fullName>
    <active>true</active>
    <description>Create a Donation record to be managed via the Giving Portal.</description>
    <label>Cause</label>
</RecordType>