src/core-crm/objects/Donation__c/recordTypes/Endowment.recordType-meta.xml
<RecordType>
    <fullName>Endowment</fullName>
    <active>true</active>
    <description>Create a Donation record to establish a new Endowment Account.</description>
    <label>Endowment</label>
</RecordType>