src/core-crm/objects/Donation__c/recordTypes/Endowment_Child.recordType-meta.xml
<RecordType>
    <fullName>Endowment_Child</fullName>
    <active>true</active>
    <description>Create a Child Donation record for an Endowment record that requires a Parent-Child relationship.</description>
    <label>Endowment Child</label>
</RecordType>