src/core-crm/objects/Donation__c/recordTypes/Endowment_Funds_Transfer.recordType-meta.xml
<RecordType>
    <fullName>Endowment_Funds_Transfer</fullName>
    <active>true</active>
    <description>Create a Donation record to manage the internal transfer of funds from an Endowment Account to another Designation.</description>
    <label>Endowment Funds Transfer</label>
</RecordType>