src/core-crm/objects/Donation__c/recordTypes/Endowment_Instalment.recordType-meta.xml
<RecordType>
    <fullName>Endowment_Instalment</fullName>
    <active>true</active>
    <description>Create a child Donation record for an Endowment Payment Plan.</description>
    <label>Endowment Instalment</label>
</RecordType>