src/core-crm/objects/Donation__c/recordTypes/Gift_In_Kind.recordType-meta.xml
<RecordType>
    <fullName>Gift_In_Kind</fullName>
    <active>true</active>
    <description>Create a Donation record for a Gift In Kind donation.</description>
    <label>Gift In Kind</label>
</RecordType>