src/core-crm/objects/Donation__c/recordTypes/Pledge.recordType-meta.xml
<RecordType>
    <fullName>Pledge</fullName>
    <active>true</active>
    <description>Create a Donation record to capture a Pledge. This record type must be used if the donation needs to be allocated to more than one Designation.</description>
    <label>Pledge</label>
</RecordType>