src/core-crm/objects/Donation__c/recordTypes/Pledge_Child.recordType-meta.xml
<RecordType>
    <fullName>Pledge_Child</fullName>
    <active>true</active>
    <description>Create a Child Donation record for a Pledge Donation that requires a Parent-Child relationship.</description>
    <label>Pledge Child</label>
</RecordType>