src/core-crm/objects/Donation__c/recordTypes/Pledge_Designation_Split.recordType-meta.xml
<RecordType>
    <fullName>Pledge_Designation_Split</fullName>
    <active>true</active>
    <description>Create a child Donation record for single Pledge Donation that is being allocated to multiple Designations.</description>
    <label>Pledge Designation Split</label>
</RecordType>