src/core-crm/objects/Donation__c/recordTypes/Pledge_Instalment.recordType-meta.xml
<RecordType>
    <fullName>Pledge_Instalment</fullName>
    <active>true</active>
    <description>Create a child Donation record for a Pledge Donation where the Pledge requires a Payment Plan.</description>
    <label>Pledge Instalment</label>
</RecordType>