src/core-crm/objects/Donation__c/recordTypes/Staff_Giving.recordType-meta.xml
<RecordType>
    <fullName>Staff_Giving</fullName>
    <active>true</active>
    <description>Create a Donation record for a QUT Staff Giving payroll deduction</description>
    <label>Staff Giving</label>
</RecordType>