src/core-crm/objects/Donation__c/validationRules/Asset_Acq_Date_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Asset_Acq_Date_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 RecordType.DeveloperName = &apos;Gift_In_Kind&apos;,
 ISCHANGED(Stage__c),
 ISPICKVAL( PRIORVALUE(Stage__c) ,&apos;Accepted&apos;),
 ISPICKVAL( Stage__c, &apos;Received&apos;),
 ISBLANK( Donation_Asset__r.Acquisition_Date__c )
)</errorConditionFormula>
    <errorMessage>Acquisition Date is a Mandatory Field</errorMessage>
</ValidationRule>