src/core-crm/objects/Donation__c/validationRules/Asset_Creator_Name_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Asset_Creator_Name_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 RecordType.DeveloperName = &apos;Gift_In_Kind&apos;,
 ISCHANGED(Stage__c),
 ISPICKVAL( PRIORVALUE(Stage__c) ,&apos;Proposed&apos;),
 ISPICKVAL( Stage__c, &apos;Accepted&apos;),
 ISBLANK( Donation_Asset__r.Asset_Creator_Name__c )
)</errorConditionFormula>
    <errorMessage>Asset Creator Name is a Mandatory Field</errorMessage>
</ValidationRule>