src/core-crm/objects/Donation__c/validationRules/Asset_Status_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Asset_Status_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 RecordType.DeveloperName = &apos;Gift_In_Kind&apos;,
 ISCHANGED(Stage__c),
 ISPICKVAL( PRIORVALUE(Stage__c) ,&apos;Proposed&apos;),
 ISPICKVAL( Stage__c, &apos;Accepted&apos;),
 ISPICKVAL(  Donation_Asset__r.Asset_Status__c, &apos;&apos;  )
)</errorConditionFormula>
    <errorMessage>Asset Status is a Mandatory Field</errorMessage>
</ValidationRule>